--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,18 +1,21 @@
 // Colors
 
-// $white: white;
+$white: white;
 // $blue: #00b2ff;
 // $white-opacity: rgba(255, 255, 255, 0.1);
 $black-opacity: rgba(0, 0, 0, 0.8);
+$background-basic: #f0eae4;
+$background2: #a87b62;
+$brown: #9b9997;
 // $border-grey: #ebebeb;
-// $black: black;
+$black: black;
 $black2: #1d1613;
 // $black3: #131314;
 // $basic: #fe7865;
 // $light: #fbf8f8;
 // $dark: #1b2d37;
 // $deep-dark: #141517;
-// $grey: #666666;
+$grey: #f6f5f4;
 // $grey2: #1b2d37;
 // $grey3: rgba(98, 105, 98, 0.2);
 // $grey4: #c4c4c4;
