--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,14 +7,14 @@
 // Blocks
 
 @import "blocks/page.scss";
-// @import "blocks/page-header.scss";
+@import "blocks/page-header.scss";
 @import "blocks/page-footer.scss";
-// @import "blocks/button.scss";
-// @import "blocks/main-nav.scss";
+@import "blocks/button.scss";
+@import "blocks/main-nav.scss";
 // @import "blocks/company.scss";
 // @import "blocks/service.scss";
 @import "blocks/wrapper.scss";
-// @import "blocks/promo.scss";
+@import "blocks/promo.scss";
 // @import "blocks/questions.scss";
-// @import "blocks/modal.scss";
+@import "blocks/modal.scss";
 // @import "blocks/social.scss";
