--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,4 +17,4 @@
 @import "blocks/promo.scss";
 // @import "blocks/questions.scss";
 @import "blocks/modal.scss";
-// @import "blocks/social.scss";
+@import "blocks/social.scss";
