--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,6 @@
 .page-header {
-  // background-color: red;
+  @media (max-width: $tablet-width) {
+    background-color: $background2;
+    min-height: 778px;
+  }
 }
