--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -2,7 +2,8 @@
 
 $white: white;
 // $blue: #00b2ff;
-// $white-opacity: rgba(255, 255, 255, 0.1);
+$white-opacity: rgba(255, 255, 255, 0.15);
+$white-opacity2: rgba(255, 255, 255, 0.75);
 $black-opacity: rgba(0, 0, 0, 0.8);
 $background-basic: #f0eae4;
 $background2: #a87b62;
