--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,6 +1,15 @@
 .main-nav {
   @media (max-width: $tablet-width) {
-    margin-bottom: 45px;
+    background: $white;
+    min-height: 126px;
+  }
+
+  &--opened,
+  &--nojs {
+    @media (max-width: $tablet-width) {
+      background: $background2;
+      min-height: 778px;
+    }
   }
 }
 
@@ -16,7 +25,6 @@
   @media (max-width: $tablet-width) {
     border: none;
     margin-bottom: 0;
-    padding-top: 22px;
   }
 }
 
@@ -29,6 +37,9 @@
   @media (max-width: $tablet-width) {
     min-height: 126px;
     padding: 0 6vw;
+    padding-top: 0;
+    box-sizing: border-box;
+    background: $white;
   }
 }
 
@@ -44,7 +55,7 @@
   background-color: transparent;
 
   @media (max-width: $tablet-width) {
-    // display: none;
+    display: none;
     order: 1;
     margin: 0;
   }
@@ -78,6 +89,7 @@
     margin-top: 34px;
     text-indent: 40px;
     padding-top: 12px;
+    box-sizing: border-box;
   }
 }
 
@@ -103,8 +115,8 @@
     left: 0;
     width: 25px;
     height: 2px;
-    background-color: $white;
-    box-shadow: 0 8px 0 0 $white, 0 16px 0 0 $white;
+    background-color: $black2;
+    box-shadow: 0 8px 0 0 $black2, 0 16px 0 0 $black2;
   }
 
   @media (max-width: $tablet-width) {
@@ -136,7 +148,8 @@
   justify-content: flex-end;
 
   @media (max-width: $tablet-width) {
-    width: 40vw;
+    width: auto;
+    margin-left: 36.5vw;
   }
 }
 
@@ -164,7 +177,7 @@
 
   @media (max-width: $tablet-width) {
     display: block;
-    stroke: $white;
+    stroke: $black2;
     padding-top: 6px;
   }
 }
@@ -184,7 +197,7 @@
   fill: $background2;
 
   @media (max-width: $tablet-width) {
-    fill: $white;
+    fill: $background2;
   }
 }
 
@@ -200,7 +213,7 @@
   min-height: 39px;
 
   @media (max-width: $tablet-width) {
-    // display: none;
+    display: none;
     flex-direction: column;
     gap: 21px;
     padding-left: 45px;
@@ -239,7 +252,7 @@
   display: none;
 
   @media (max-width: $tablet-width) {
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     flex-direction: column;
     gap: 20px;
@@ -258,8 +271,65 @@
 
   @media (max-width: $tablet-width) {
     @include font-set(18px, 23px, 500);
-    display: block;
+    display: none;
     color: $white;
     padding-left: 45px;
+  }
+}
+
+.main-nav--opened .main-nav__container,
+.main-nav--nojs .main-nav__container {
+  @media (max-width: $tablet-width) {
+    padding-top: 22px;
+    background: $background2;
+  }
+}
+
+.main-nav--opened .main-nav__wrapper,
+.main-nav--nojs .main-nav__wrapper {
+  @media (max-width: $tablet-width) {
+    margin-bottom: 45px;
+  }
+}
+
+.main-nav--opened .main-nav__list,
+.main-nav--opened .main-nav__list-about,
+.main-nav--nojs .main-nav__list,
+.main-nav--nojs .main-nav__list-about {
+  @media (max-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.main-nav--opened .main-nav__log,
+.main-nav--opened .main-nav__form,
+.main-nav--nojs .main-nav__log,
+.main-nav--nojs .main-nav__form {
+  @media (max-width: $tablet-width) {
+    display: block;
+  }
+}
+
+.main-nav--opened .main-nav__toggle,
+.main-nav--nojs .main-nav__toggle {
+  @media (max-width: $tablet-width) {
+    &::before {
+      background-color: $white;
+      box-shadow: 0 8px 0 0 $white, 0 16px 0 0 $white;
+    }
+  }
+}
+
+.main-nav--opened .main-nav__cart-icon,
+.main-nav--nojs .main-nav__cart-icon {
+  @media (max-width: $tablet-width) {
+    stroke: $white;
+  }
+}
+
+.main-nav--opened .main-nav__logo-icon,
+.main-nav--nojs .main-nav__logo-icon {
+  @media (max-width: $tablet-width) {
+    fill: $white;
   }
 }
