--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -8,11 +8,24 @@
   margin: 0 auto;
   width: 100%;
   color: $white;
+
+  @media (max-width: $tablet-width) {
+    min-height: 446px;
+  }
 }
 
 .page-footer__wrapper {
   display: flex;
   flex-wrap: wrap;
+
+  @media (max-width: $tablet-width) {
+    padding-left: 45px;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .page-footer__subscribe {
@@ -21,6 +34,18 @@
   flex-direction: column;
   padding-top: 92px;
   margin-right: 6.5vw;
+  box-sizing: border-box;
+
+  @media (max-width: $tablet-width) {
+    width: 100%;
+    padding-top: 52px;
+    margin-right: 21.2vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-right: 0;
+    margin-bottom: 45px;
+  }
 }
 
 .page-footer__title {
@@ -29,6 +54,10 @@
   letter-spacing: 0.03em;
   margin: 0;
   margin-bottom: 10px;
+
+  @media (max-width: $mobile-width) {
+    width: 70vw;
+  }
 }
 
 .page-footer__slogan {
@@ -36,6 +65,10 @@
   color: $brown;
   margin: 0;
   margin-bottom: 32px;
+
+  @media (max-width: $mobile-width) {
+    width: 71vw;
+  }
 }
 
 .page-footer__form input {
@@ -50,6 +83,14 @@
     @include font-set(14px, 21px, 500);
     font-family: $primary-font;
     color: $brown;
+  }
+
+  @media (max-width: $tablet-width) {
+    width: 59vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 57.2vw;
   }
 }
 
@@ -100,19 +141,62 @@
   flex-direction: column;
   padding-top: 100px;
   margin-right: 5.2vw;
+  // gap: 21px;
+
+  @media (max-width: $tablet-width) {
+    padding-top: 0;
+    margin-right: 11vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 21px;
+  }
 }
 
 .page-footer__about-list {
   padding-top: 100px;
   margin-right: 7.3vw;
+  // display: flex;
+  // flex-wrap: wrap;
+  // flex-direction: column;
+  // gap: 21px;
+
+  @media (max-width: $tablet-width) {
+    padding-top: 0;
+    margin-right: 11vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 100%;
+  }
 }
 
 .page-footer__social-list {
+  // display: flex;
+  // flex-wrap: wrap;
+  // flex-direction: column;
   padding-top: 100px;
+  // gap: 21px;
+
+  @media (max-width: $tablet-width) {
+    padding-top: 0;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-top: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .page-footer__item {
   margin-bottom: 21px;
+}
+
+.page-footer__item span {
+  @media (max-width: $mobile-width) {
+    display: none;
+  }
 }
 
 .page-footer__social-list .page-footer__item a {
