--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,3 +1,16 @@
 .social__link-icon {
   margin-right: 12px;
+
+  @media (max-width: $mobile-width) {
+    display: none;
+  }
+}
+
+.social__link-icon-mobile {
+  display: none;
+
+  @media (max-width: $mobile-width) {
+    display: block;
+    margin-right: 30px;
+  }
 }
