--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,4 +18,5 @@
 // @import "blocks/questions.scss";
 @import "blocks/modal.scss";
 @import "blocks/social.scss";
+@import "blocks/faq.scss";
 @import "blocks/follow.scss";
