--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -2,7 +2,16 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-left: 24px;
+  padding-left: 12px;
+
+  @media (max-width: $tablet-width) {
+    padding-left: 0;
+    margin-bottom: 42px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 32px;
+  }
 }
 
 .faq__wrapper {
@@ -10,7 +19,11 @@
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  width: 70vw;
+  width: 71vw;
+
+  @media (max-width: $tablet-width) {
+    width: 88vw;
+  }
 }
 
 .faq__title {
@@ -19,6 +32,11 @@
   align-self: center;
   letter-spacing: 0.03em;
   margin-bottom: 53px;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 28px;
+    text-align: center;
+  }
 }
 
 .faq__list {
@@ -39,8 +57,18 @@
 
 .faq__question {
   @include font-set(18px, 23px, 500);
-  margin-top: 40px;
+  margin: 0;
   margin-bottom: 9px;
+
+  @media (max-width: $tablet-width) {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  @media (max-width: $mobile-width) {
+    @include font-set(16px, 22px, 500);
+    width: 57vw;
+  }
 }
 
 .faq__button {
@@ -53,29 +81,81 @@
   &::before {
     content: "";
     position: absolute;
-    top: 15px;
-    left: -15px;
-    width: 10px;
-    height: 10px;
+    top: -5px;
+    left: -5px;
+    width: 11px;
+    height: 11px;
     border-bottom: 1px solid $background2;
     border-left: 1px solid $background2;
-    transform: rotate(135deg);
+    transform: rotate(-45deg);
+
+    @media (max-width: $mobile-width) {
+      top: -25px;
+      left: -7px;
+    }
   }
 }
 
 .faq__answer {
   @include font-set(16px, 21px, 400);
-  width: 57%;
+  width: 527px;
   margin: 0;
   padding-left: 10px;
-  margin-bottom: 40px;
+  display: none;
+
+  @media (max-width: $tablet-width) {
+    width: 95%;
+    margin-top: 16px;
+    margin-bottom: 12px;
+  }
+
+  @media (max-width: $mobile-width) {
+    @include font-set(14px, 20px, 400);
+    width: 65vw;
+    padding-left: 0;
+    margin-bottom: 0;
+  }
 }
 
 .faq__item {
   box-sizing: border-box;
-  padding: 0 30px;
+  padding: 43px;
+
+  @media (max-width: $mobile-width) {
+    cursor: pointer;
+    pointer-events: auto;
+    padding: 18px;
+  }
 
   &:not(:last-of-type) {
     border-bottom: 1px solid $background2;
+  }
+}
+
+.faq__item--opened .faq__answer,
+.faq__item--nojs .faq__answer {
+  display: block;
+}
+
+.faq__item--opened .faq__button,
+.faq__item--nojs .faq__button {
+  &::before {
+    transform: rotate(135deg);
+
+    @media (max-width: $mobile-width) {
+      top: -15px;
+    }
+  }
+}
+
+.faq__item--second .faq__question {
+  @media (max-width: $mobile-width) {
+    width: 48vw;
+  }
+}
+
+.faq__item--fourth .faq__question {
+  @media (max-width: $mobile-width) {
+    width: 206px;
   }
 }
