--- a/source/sass/blocks/follow.scss
+++ b/source/sass/blocks/follow.scss
@@ -17,6 +17,10 @@
   font-family: $secondary-font;
   letter-spacing: 0.03em;
   align-self: center;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 20px;
+  }
 }
 
 .follow__link {
@@ -27,6 +31,10 @@
   border-bottom: 1px solid $background2;
   width: 75px;
   margin-bottom: 58px;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 41px;
+  }
 }
 
 .follow__list {
