--- a/source/sass/blocks/follow.scss
+++ b/source/sass/blocks/follow.scss
@@ -32,6 +32,11 @@
   width: 75px;
   margin-bottom: 58px;
 
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
   @media (max-width: $mobile-width) {
     margin-bottom: 41px;
   }
