--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,7 +12,7 @@
 @import "blocks/button.scss";
 @import "blocks/main-nav.scss";
 // @import "blocks/company.scss";
-// @import "blocks/service.scss";
+@import "blocks/blog.scss";
 @import "blocks/wrapper.scss";
 @import "blocks/promo.scss";
 // @import "blocks/questions.scss";
