--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -4,6 +4,14 @@
   justify-content: center;
   align-content: center;
   margin-bottom: 90px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 45px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .blog__wrapper {
@@ -33,6 +41,10 @@
   border-bottom: 1px solid $background2;
   margin-bottom: 57px;
 
+  @media (max-width: $mobile-width) {
+    margin-bottom: 47px;
+  }
+
   &:hover,
   &:focus {
     opacity: 0.7;
@@ -42,12 +54,23 @@
 .blog__list {
   @include list-reset;
   display: grid;
-  row-gap: 30px;
-  column-gap: 30px;
+  row-gap: 2.4vw;
+  column-gap: 2.4vw;
   grid-template-columns: 41.7vw 41.7vw;
   grid-template-rows: 22vw 22vw;
   grid-template-areas: "block1 block3"
     "block2 block3";
+
+  @media (max-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 51px;
+  }
+
+  @media (max-width: $mobile-width) {
+    gap: 12.5vw;
+  }
 }
 
 .blog__item--one {
@@ -58,6 +81,19 @@
   grid-template-columns: 20.9vw 20.9vw;
   grid-template-rows: 22vw;
   grid-template-areas: "pic article";
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: 44vw 44vw;
+    grid-template-rows: 38.9vw;
+    grid-template-areas: "pic article";
+  }
+
+  @media (max-width: $mobile-width) {
+    grid-template-columns: 91vw;
+    grid-template-rows: 80vw 80vw;
+    grid-template-areas: "pic"
+      "article";
+  }
 }
 
 .blog__item--two {
@@ -68,6 +104,19 @@
   grid-template-columns: 20.9vw 20.9vw;
   grid-template-rows: 22vw;
   grid-template-areas: "article pic";
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: 44vw 44vw;
+    grid-template-rows: 38.9vw;
+    grid-template-areas: "article pic";
+  }
+
+  @media (max-width: $mobile-width) {
+    grid-template-columns: 91vw;
+    grid-template-rows: 80vw 80vw;
+    grid-template-areas: "pic"
+      "article";
+  }
 }
 
 .blog__item--three {
@@ -77,6 +126,17 @@
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
   grid-template-rows: 22vw 22vw;
+
+  @media (max-width: $tablet-width) {
+    grid-template-columns: 44vw 44vw;
+    grid-template-rows: 38.9vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    row-gap: 0;
+    grid-template-columns: 91vw;
+    grid-template-rows: 80vw 80vw;
+  }
 }
 
 .blog__item--one .blog__item-img {
@@ -156,6 +216,8 @@
   }
 
   @media (max-width: $tablet-width) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     background: url("../../img/alve-tablet@1x.jpg");
     background-size: cover;
 
@@ -166,6 +228,8 @@
   }
 
   @media (max-width: $mobile-width) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     background: url("../../img/alve-mobile@1x.jpg");
     background-size: cover;
 
@@ -184,6 +248,16 @@
 .blog__item--three .blog__item-text {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+
+  @media (max-width: $tablet-width) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+
+  @media (max-width: $mobile-width) {
+    grid-column: 1/ 2;
+    grid-row: 2 / 3;
+  }
 }
 
 .blog__item-text {
@@ -200,6 +274,26 @@
   margin: 0;
   margin-top: 5vw;
   margin-bottom: 1vw;
+
+  @media (max-width: $tablet-width) {
+    margin-top: 9vw;
+    margin-bottom: 1.5vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-top: 14vw;
+    margin-bottom: 4.4vw;
+  }
+}
+
+.blog__item--three .blog__item-date {
+  @media (max-width: $tablet-width) {
+    margin-top: 11vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-top: 19vw;
+  }
 }
 
 .blog__item-name {
@@ -210,6 +304,15 @@
   margin: 0;
   width: 163px;
   margin-bottom: 2.5vw;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 4.5vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 11vw;
+    width: 54vw;
+  }
 }
 
 .blog__item-link {
