--- a/source/sass/blocks/follow.scss
+++ b/source/sass/blocks/follow.scss
@@ -9,6 +9,11 @@
 
   @media (max-width: $tablet-width) {
     padding-left: 0;
+    margin-bottom: 78px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 72px;
   }
 }
 
@@ -17,6 +22,10 @@
   font-family: $secondary-font;
   letter-spacing: 0.03em;
   align-self: center;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 18px;
+  }
 
   @media (max-width: $mobile-width) {
     margin-bottom: 20px;
@@ -53,8 +62,10 @@
     "pic2 pic3 pic5 pic7";
 
   @media (max-width: $tablet-width) {
-    row-gap: 16px;
-    column-gap: 20px;
+    row-gap: 22px;
+    column-gap: 17px;
+    grid-template-columns: 17vw 30vw 17vw 17vw;
+    grid-template-rows: 17vw 11.5vw;
   }
 
   @media (max-width: $mobile-width) {
