add new desktop

--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-left: 12px;
+  margin-bottom: 80px;
 
   @media (max-width: $tablet-width) {
     padding-left: 0;
