--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -29,9 +29,9 @@
   background-color: $black-opacity;
 }
 
-.index-wrapper {
-  display: flex;
-  flex-direction: column;
-  padding: 50px;
-  margin: 0 auto;
-}
+// .index-wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   padding: 50px;
+//   margin: 0 auto;
+// }
