--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-content: center;
   margin-bottom: 90px;
+  margin-left: 20px;
 
   @media (max-width: $tablet-width) {
     margin-bottom: 45px;
