--- a/source/sass/blocks/follow.scss
+++ b/source/sass/blocks/follow.scss
@@ -6,6 +6,7 @@
   align-content: center;
   box-sizing: border-box;
   padding-left: 20px;
+  margin-bottom: 125px;
 
   @media (max-width: $tablet-width) {
     padding-left: 0;
