--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 463px;
+  margin-bottom: 120px;
 
   @media (min-resolution: 2dppx) {
     background: url("../../img/intro-desktop@2x.jpg");
