--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,7 +15,7 @@
 @import "blocks/blog.scss";
 @import "blocks/wrapper.scss";
 @import "blocks/promo.scss";
-// @import "blocks/questions.scss";
+@import "blocks/new.scss";
 @import "blocks/modal.scss";
 @import "blocks/social.scss";
 @import "blocks/faq.scss";
