--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -7,7 +7,8 @@
   margin-left: 20px;
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 45px;
+    margin-bottom: 42px;
+    margin-left: 0;
   }
 
   @media (max-width: $mobile-width) {
