--- a/source/sass/blocks/new.scss
+++ b/source/sass/blocks/new.scss
@@ -7,11 +7,12 @@
   padding-left: 19px;
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 45px;
+    margin-bottom: 65px;
+    padding-left: 0;
   }
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 30px;
+    margin-bottom: 57px;
   }
 }
 
@@ -30,6 +31,10 @@
   align-self: center;
   margin: 0;
   margin-bottom: 6px;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 17px;
+  }
 }
 
 .new__link {
@@ -40,6 +45,10 @@
   border-bottom: 1px solid $background2;
   margin: 0;
   margin-bottom: 50px;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 35px;
+  }
 
   &:hover,
   &:focus {
@@ -52,6 +61,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 18px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 9px;
+  }
+
+  @media (max-width: $mobile-width) {
+    display: none;
+  }
 }
 
 .new__button {
@@ -71,6 +88,10 @@
       background-color: $background2;
       top: 0;
       left: 0;
+
+      @media (max-width: $tablet-width) {
+        width: 36px;
+      }
     }
 
     &::after {
@@ -87,10 +108,17 @@
   }
 
   &--right {
+    &::before {
+      left: -16px;
+
+      @media (max-width: $tablet-width) {
+        left: -22px;
+      }
+    }
+
     &::after {
       transform: rotate(310deg);
-      right: 0;
-      left: 18px;
+      left: 0;
     }
   }
 }
@@ -101,6 +129,15 @@
   flex-wrap: wrap;
   gap: 30px;
   margin-bottom: 50px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 41px;
+  }
+
+  @media (max-width: $mobile-width) {
+    gap: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 .new__item a {
@@ -111,14 +148,38 @@
   align-items: center;
 }
 
+.new__item {
+  &:nth-of-type(3),
+  &:nth-of-type(4) {
+    @media (max-width: $tablet-width) {
+      display: none;
+    }
+  }
+}
+
 .new__img {
   margin-bottom: 20px;
+  width: 19.7vw;
+
+  @media (max-width: $tablet-width) {
+    width: 42vw;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 42vw;
+    margin-bottom: 12px;
+  }
 }
 
 .new__item-name {
   @include font-set(16px, 21px, 500);
   margin: 0;
   margin-bottom: 5px;
+
+  @media (max-width: $mobile-width) {
+    width: 40vw;
+    text-align: center;
+  }
 }
 
 .new__item-price {
@@ -132,6 +193,26 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 15px;
+
+  @media (max-width: $tablet-width) {
+    gap: 13px;
+  }
+
+  @media (max-width: $mobile-width) {
+    display: none;
+  }
+}
+
+.new__pagination-list-mobile {
+  @include list-reset;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+  display: none;
+
+  @media (max-width: $mobile-width) {
+    display: flex;
+  }
 }
 
 .new__pagination-item {
@@ -146,5 +227,9 @@
   &:nth-of-type(5),
   &:nth-of-type(6) {
     display: none;
+
+    @media (max-width: $tablet-width) {
+      display: block;
+    }
   }
 }
