--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -49,10 +49,20 @@
   text-align: center;
   margin: 0;
   margin-bottom: 22px;
+
+  @media (max-width: $mobile-width) {
+    @include font-set(24px, 31px, 700);
+    width: 100%;
+    margin-bottom: 18px;
+  }
 }
 
 .modal__form {
   padding: 0 45px;
+
+  @media (max-width: $mobile-width) {
+    padding: 0 15px;
+  }
 }
 
 .modal__form input {
@@ -63,8 +73,16 @@
   box-sizing: border-box;
   padding: 13px 0;
 
+  @media (max-width: $mobile-width) {
+    width: 100%;
+  }
+
   &:not(:nth-of-type(1)) {
     margin-top: 22px;
+
+    @media (max-width: $mobile-width) {
+      margin-top: 18px;
+    }
   }
 
   &::placeholder {
@@ -81,6 +99,10 @@
   text-align: end;
   margin-top: 5px;
   margin-bottom: 45px;
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 34px;
+  }
 
   &:hover,
   &:focus {
@@ -113,6 +135,11 @@
     width: 18px;
     height: 2px;
     background-color: $black2;
+
+    @media (max-width: $mobile-width) {
+      top: 20px;
+      right: 15px;
+    }
   }
 
   &::before {
@@ -127,6 +154,17 @@
 
 .modal__image {
   margin-bottom: 46px;
+
+  @media (max-width: $tablet-width) {
+    width: 442px;
+    height: 138px;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 270px;
+    height: 84px;
+    margin-bottom: 32px;
+  }
 }
 
 
@@ -140,6 +178,10 @@
   padding: 23px 0;
   border: none;
 
+  @media (max-width: $mobile-width) {
+    width: 240px;
+  }
+
   &:hover {
     opacity: 0.7;
   }
@@ -149,6 +191,10 @@
   @include font-set(14px, 21px, 500);
   color: $brown;
   margin-left: 53px;
+
+  @media (max-width: $mobile-width) {
+    margin-left: 5px;
+  }
 }
 
 .modal__text a {
@@ -162,13 +208,12 @@
 }
 
 .modal__filter {
-  position: absolute;
+  position: fixed;
   top: 0;
-  // right: -16px;
   left: 0;
   margin: auto;
-  // padding: 40px;
-  width: 458px;
+  width: 768px;
+  min-height: 957px;
   max-width: 100%;
   max-height: 100%;
   box-sizing: border-box;
@@ -177,15 +222,27 @@
   border: none;
   overflow: auto;
 
+  @media (max-width: $tablet-width) {
+    padding: 0;
+    padding-top: 25px;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 320px;
+    min-height: 872px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    padding-top: 15px;
+  }
+
   &--opened {
-    display: block;
+    display: flex;
   }
 }
 
 .modal__filter-wrapper {
-  // width: 442px;
-  padding: 15px 0;
-  // border: 1px solid red;
+  padding-bottom: 10px;
 }
 
 .modal__filter-close {
@@ -207,11 +264,25 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 10px;
+    right: 330px;
     width: 32px;
     height: 32px;
     background: url("../../img/icons/close.svg");
+
+    @media (max-width: $mobile-width) {
+      top: 60px;
+      right: 15px;
+    }
+  }
+}
+
+
+.modal__filter .modal__filter-wrapper {
+  width: 442px;
+
+  @media (max-width: $mobile-width) {
+    width: 270px;
   }
 }
 
@@ -225,16 +296,106 @@
 
 .modal__filter .catalog__form-list {
   border: none;
+  margin-bottom: 25px;
 }
 
 .modal__filter .catalog__section {
-  padding: 33px;
+  padding: 35px 22px;
+
+  @media (max-width: $mobile-width) {
+    padding: 24px 22px;
+  }
+}
+
+.modal__filter .catalog__form-controls {
+  padding-left: 40px;
+
+  @media (max-width: $mobile-width) {
+    padding-top: 10px;
+    padding-left: 20px;
+  }
+}
+
+.modal__filter .catalog__form-scale {
+  width: 305px;
+
+  @media (max-width: $mobile-width) {
+    width: 240px;
+    padding-left: 44px;
+  }
+}
+
+.modal__filter .catalog__form-toggle {
+  width: 18px;
+  height: 18px;
+}
+
+.modal__filter .catalog__form-toggle-min {
+  top: -10px;
+  left: 85px;
+
+  @media (max-width: $mobile-width) {
+    top: 0;
+    left: 50px;
+  }
+}
+
+.modal__filter .catalog__form-toggle-max {
+  top: -10px;
+  left: 260px;
+
+  @media (max-width: $mobile-width) {
+    top: 0;
+    left: 187px;
+  }
+}
+
+.modal__filter .catalog__form-price p {
+  @include font-set(16px, 21px, 500);
+}
+
+.modal__filter .catalog__form-price {
+  width: 215px;
+  padding-left: 36px;
+
+  @media (max-width: $mobile-width) {
+    width: 175px;
+    padding-left: 20px;
+  }
+}
+
+.modal__filter .catalog__form-filter {
+  margin-bottom: 45px;
+}
+
+.modal__filter .catalog__form-button-block {
+  padding-left: 31px;
+  width: 362px;
+
+  @media (max-width: $mobile-width) {
+    padding-left: 20px;
+    width: 230px;
+    gap: 20px;
+  }
 }
 
 .modal__filter .catalog__section-list {
   gap: 17px;
-  margin-bottom: 37px;
+  margin-bottom: 26px;
   padding-left: 35px;
+
+  @media (max-width: $mobile-width) {
+    padding-left: 29px;
+  }
+}
+
+.modal__filter .catalog__btn {
+  &::before {
+    @media (max-width: $mobile-width) {
+      top: 5px;
+      left: -2px;
+    }
+  }
 }
 
 .modal__login {
@@ -243,17 +404,37 @@
   }
 }
 
+
 .modal-page {
   margin: auto;
-  padding: 0;
-  background-color: $background-basic;
-  width: 430px;
-  height: 586px;
+  width: 450px;
+  height: 680px;
   max-width: 100%;
   max-height: 100%;
   box-sizing: border-box;
-  // display: none;
   z-index: 3;
   border: none;
   overflow: auto;
+}
+
+.modal-page fieldset {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.modal__back {
+  @include font-set(14px, 21px, 500);
+  color: $black2;
+  text-align: center;
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+}
+
+.modal__logo {
+  text-align: center;
+  margin-bottom: 10px;
 }
