--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -1,10 +1,26 @@
 .swiper {
   width: 88vw;
-  height: 404px;
+  height: 29.4vw;
+  padding-left: 2vw;
+
+  @media (max-width: $tablet-width) {
+    width: 91vw;
+    height: 58vw;
+    padding-left: 0;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 91vw;
+    height: 80vw;
+  }
 }
 
 .swiper__card {
   &:not(:nth-of-type(4)) {
     margin-right: 30px;
+
+    @media (max-width: $mobile-width) {
+      margin-right: 0;
+    }
   }
 }
