--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Regular.woff2") format("woff2");
+  src: url("../fonts/cormorant-garamond-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Regular.woff") format("woff");
+  src: url("../fonts/cormorant-garamond-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -16,15 +16,7 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Italic.woff2") format("woff2");
-  font-weight: 400;
-  font-style: italic;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Italic.woff") format("woff");
+  src: url("../fonts/cormorant-garamond-italic.woff2") format("woff2");
   font-weight: 400;
   font-style: italic;
   font-display: swap;
@@ -32,7 +24,15 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Medium.woff2") format("woff2");
+  src: url("../fonts/cormorant-garamond-italic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Cormorant Garamond";
+  src: url("../fonts/cormorant-garamond-medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -40,7 +40,7 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Medium.woff") format("woff");
+  src: url("../fonts/cormorant-garamond-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -48,7 +48,7 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-SemiBold.woff2") format("woff2");
+  src: url("../fonts/cormorant-garamond-semibold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -56,15 +56,15 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-SemiBold.woff") format("woff");
+  src: url("../fonts/cormorant-garamond-semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("../fonts/poppins-Bold.woff2") format("woff2");
+  font-family: "Cormorant Garamond";
+  src: url("../fonts/cormorant-garamond-bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -72,7 +72,7 @@
 
 @font-face {
   font-family: "Cormorant Garamond";
-  src: url("../fonts/cormorantGaramond-Bold.woff") format("woff");
+  src: url("../fonts/cormorant-garamond-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -80,7 +80,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-Regular.woff2") format("woff2");
+  src: url("../fonts/poppins-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -88,7 +88,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-Regular.woff") format("woff");
+  src: url("../fonts/poppins-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -96,7 +96,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-Medium.woff2") format("woff2");
+  src: url("../fonts/poppins-medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -104,7 +104,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-Medium.woff") format("woff");
+  src: url("../fonts/poppins-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -112,7 +112,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-SemiBold.woff2") format("woff2");
+  src: url("../fonts/poppins-semibold.woff2") format("woff2");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -120,7 +120,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-SemiBold.woff") format("woff");
+  src: url("../fonts/poppins-semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -128,7 +128,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-Bold.woff2") format("woff2");
+  src: url("../fonts/poppins-bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -136,7 +136,7 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/poppins-Bold.woff") format("woff");
+  src: url("../fonts/poppins-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
