--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -143,31 +143,32 @@
 
 .blog__item--one .blog__item-img {
   grid-area: pic;
-  background: url("../../img/jess-desktop@1x.jpg");
+  background: url("../img/jess-desktop@1x.jpg");
+  background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background: url("../../img/jess-desktop@2x.jpg");
+    background: url("../img/jess-desktop@2x.jpg");
     background-size: cover;
   }
 
   @media (max-width: $tablet-width) {
-    background: url("../../img/jess-tablet@1x.jpg");
+    background: url("../img/jess-tablet@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/jess-tablet@2x.jpg");
+      background: url("../img/jess-tablet@2x.jpg");
       background-size: cover;
     }
   }
 
   @media (max-width: $mobile-width) {
-    background: url("../../img/jess-mobile@1x.jpg");
+    background: url("../img/jess-mobile@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/jess-mobile@2x.jpg");
+      background: url("../img/jess-mobile@2x.jpg");
       background-size: cover;
     }
   }
@@ -175,31 +176,32 @@
 
 .blog__item--two .blog__item-img {
   grid-area: pic;
-  background: url("../../img/alex-desktop@1x.jpg");
+  background: url("../img/alex-desktop@1x.jpg");
+  background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background: url("../../img/alex-desktop@2x.jpg");
+    background: url("../img/alex-desktop@2x.jpg");
     background-size: cover;
   }
 
   @media (max-width: $tablet-width) {
-    background: url("../../img/alex-tablet@1x.jpg");
+    background: url("../img/alex-tablet@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/alex-tablet@2x.jpg");
+      background: url("../img/alex-tablet@2x.jpg");
       background-size: cover;
     }
   }
 
   @media (max-width: $mobile-width) {
-    background: url("../../img/alex-mobile@1x.jpg");
+    background: url("../img/alex-mobile@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/alex-mobile@2x.jpg");
+      background: url("../img/alex-mobile@2x.jpg");
       background-size: cover;
     }
   }
@@ -208,23 +210,24 @@
 .blog__item--three .blog__item-img {
   grid-column: 1 / 3;
   grid-row: 1 / 3;
-  background: url("../../img/alve-desktop@1x.jpg");
+  background: url("../img/alve-desktop@1x.jpg");
+  background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background: url("../../img/alve-desktop@2x.jpg");
+    background: url("../img/alve-desktop@2x.jpg");
     background-size: cover;
   }
 
   @media (max-width: $tablet-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    background: url("../../img/alve-tablet@1x.jpg");
+    background: url("../img/alve-tablet@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/alve-tablet@2x.jpg");
+      background: url("../img/alve-tablet@2x.jpg");
       background-size: cover;
     }
   }
@@ -232,11 +235,11 @@
   @media (max-width: $mobile-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    background: url("../../img/alve-mobile@1x.jpg");
+    background: url("../img/alve-mobile@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/alve-mobile@2x.jpg");
+      background: url("../img/alve-mobile@2x.jpg");
       background-size: cover;
     }
   }
@@ -298,7 +301,7 @@
   }
 }
 
-.blog__item-name {
+.blog__item h3 {
   @include font-set(26px, 34px, 600);
   font-family: $secondary-font;
   color: $black;
