--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -24,10 +24,10 @@
     width: 270px;
     height: 470px;
   }
+}
 
-  &--opened {
-    display: block;
-  }
+.modal--opened {
+  display: block;
 }
 
 .modal fieldset {
@@ -96,6 +96,8 @@
   @include font-set(12px, 18px, 500);
   font-family: $primary-font;
   color: $brown;
+  width: 43%;
+  margin-left: 56%;
   text-align: end;
   margin-top: 5px;
   margin-bottom: 45px;
@@ -235,10 +237,10 @@
     align-content: center;
     padding-top: 15px;
   }
+}
 
-  &--opened {
-    display: flex;
-  }
+.modal-filter--opened {
+  display: flex;
 }
 
 .modal-filter-wrapper {
@@ -268,7 +270,7 @@
     right: 330px;
     width: 32px;
     height: 32px;
-    background: url("../../img/icons/close.svg");
+    background: url("../img/icons/close.svg");
 
     @media (max-width: $mobile-width) {
       top: 60px;
@@ -398,12 +400,9 @@
   }
 }
 
-.modal-login {
-  &--opened {
-    display: block;
-  }
+.modal-login--opened {
+  display: block;
 }
-
 
 .modal-page {
   margin: auto;
