--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -104,7 +104,7 @@
   &::after {
     content: "";
     position: absolute;
-    background-image: url("../../img/icons/pointer.svg");
+    background-image: url("../img/icons/pointer.svg");
     background-repeat: no-repeat;
     width: 29px;
     height: 9px;
@@ -142,7 +142,6 @@
   flex-direction: column;
   padding-top: 100px;
   margin-right: 5.2vw;
-  // gap: 21px;
 
   @media (max-width: $tablet-width) {
     padding-top: 0;
@@ -157,10 +156,6 @@
 .page-footer__about-list {
   padding-top: 100px;
   margin-right: 7.3vw;
-  // display: flex;
-  // flex-wrap: wrap;
-  // flex-direction: column;
-  // gap: 21px;
 
   @media (max-width: $tablet-width) {
     padding-top: 0;
@@ -173,11 +168,7 @@
 }
 
 .page-footer__social-list {
-  // display: flex;
-  // flex-wrap: wrap;
-  // flex-direction: column;
   padding-top: 100px;
-  // gap: 21px;
 
   @media (max-width: $tablet-width) {
     padding-top: 0;
