--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,24 +4,25 @@
   flex-direction: column;
   box-sizing: border-box;
   padding-top: 180px;
-  background: url("../../img/intro-desktop@1x.jpg");
+  background: url("../img/intro-desktop@1x.jpg");
+  background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 463px;
   margin-bottom: 120px;
 
   @media (min-resolution: 2dppx) {
-    background: url("../../img/intro-desktop@2x.jpg");
+    background: url("../img/intro-desktop@2x.jpg");
     background-size: cover;
   }
 
   @media (max-width: $tablet-width) {
-    background: url("../../img/intro-tablet@1x.jpg");
+    background: url("../img/intro-tablet@1x.jpg");
     background-size: cover;
     margin-bottom: 70px;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/intro-tablet@2x.jpg");
+      background: url("../img/intro-tablet@2x.jpg");
       background-size: cover;
     }
   }
@@ -29,11 +30,11 @@
   @media (max-width: $mobile-width) {
     padding-top: 190px;
     margin-bottom: 60px;
-    background: url("../../img/intro-mobile@1x.jpg");
+    background: url("../img/intro-mobile@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background: url("../../img/intro-mobile@2x.jpg");
+      background: url("../img/intro-mobile@2x.jpg");
       background-size: cover;
     }
   }
